MDEV-16804 SYSTEM VERSIONING columns not showing as GENERATED

Closes #830