sql/sql_show.cc
@@ -6001,9 +6001,15 @@ static int get_schema_column_record(THD *thd, TABLE_LIST *tables,
     else if (field->flags & VERS_SYSTEM_FIELD)
     {
       if (field->flags & VERS_SYS_START_FLAG)
+      {
         table->field[21]->store(STRING_WITH_LEN("ROW START"), cs);
+        buf.set(STRING_WITH_LEN("STORED GENERATED"), cs);
+      }
       else
+      {
         table->field[21]->store(STRING_WITH_LEN("ROW END"), cs);
+        buf.set(STRING_WITH_LEN("STORED GENERATED"), cs);
+      }
       table->field[21]->set_notnull();
       table->field[20]->store(STRING_WITH_LEN("ALWAYS"), cs);
     }
